# Prompt-Agent-Public

./: .env.template  .gitignore  README-zh.md  README.md  main.py  pyproject.toml
chrome_extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
js_scripts/: user-script.js
prompt_agent/: agent.py  configs.py  db.py  lifespan.py  prompts.py  provider.py  router.py  schemas.py
prompt_agent/api_key/: api_key_router.py
prompt_agent/middlewares/: docs_middleware.py  register_middlewares.py
prompt_agent/models/: __init__.py  chat_message.py  cookie_models.py
prompt_agent/openai_api/: openai_api_router.py  schemas.py  utils.py
prompt_agent/periodic_checks/: clients_limit_checks.py  limit_sheduler.py
prompt_agent/redis_manager/: api_key_manager.py  base_redis_manager.py  vector_db_collection_manager.py
prompt_agent/routers/cookie/: router.py
prompt_agent/routers/dashboard/: __init__.py  router.py
prompt_agent/static/: dashboard.html
prompt_agent/utils/: time_zone_utils.py  token_utils.py  usage_tracking.py
prompt_agent/vector_db/: prompt_vector_db.py  prompt_vector_db_router.py
prompts_crawler/claude_lib/: README.md  crawler.py  import_claude_prompts.py  prompts.json  prompts.md
prompts_processor/: filter_claude_prompts.py
